--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
         <title>Browser Tester &dash; xCreation</title>
+        <link rel="stylesheet" href="/assets/fonts/stylesheet.css">
         <link rel="stylesheet" href="/dist/main.css">
     </head>
     <body>
