Google Analytics Added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
         <meta name="keywords" content="Tester,typescript,javascript">
         <meta name="robots" content="index,follow">
         <meta name="referrer" content="origin">
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JPJZGW7PW6"></script>
+        <script type="text/javascript">
+            (function(id){
+                window.dataLayer = window.dataLayer || [];
+                window.gtag = window.gtag || function() {
+                    dataLayer.push(arguments);
+                };
+                
+                if(window.location.protocol.toString() == "https:") {
+                    gtag('js', new Date());
+                    gtag('config', id);
+                }
+            })("G-JPJZGW7PW6");
+        </script>
+        
         <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
