Thinking about design

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
         <title>Browser Tester &dash; xCreation</title>
-        <link rel="stylesheet" href="/assets/fonts/stylesheet.css">
+        <link rel="stylesheet" href="/assets/fonts/caviar-dreams/stylesheet.css">
+        <link rel="stylesheet" href="/assets/fonts/montserrat/stylesheet.css">
         <link rel="stylesheet" href="/dist/main.css">
+        <script src="/assets/lib/require.js" data-main="dist/main" type="application/javascript" charset="utf-8"></script>
     </head>
     <body>
         <nav id="top-nav">
@@ -40,6 +42,20 @@
             </div>
         </nav>
         
-        <script type="text/javascript" src="/dist/main.js" defer></script>
+        <div class="container">
+            <div class="panel">
+                <div class="row">
+                    <div class="item-to-test">
+                        <label>Item to test</label>
+                        <ul>
+                            <li>localStorage</li>
+                            <li>indexedDB</li>
+                            <li>sessionStorage</li>
+                            <li>Cookies (Biscuits Hahaha)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
