Fixing linking files from index.html

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             })("G-JPJZGW7PW6");
         </script>
         
-        <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
         <title>Browser Tester &dash; xCreation</title>
-        <link rel="stylesheet" href="/assets/fonts/caviar-dreams/stylesheet.css">
-        <link rel="stylesheet" href="/assets/fonts/montserrat/stylesheet.css">
-        <link rel="stylesheet" href="/dist/main.css">
-        <script src="/assets/lib/require.js" data-main="dist/main" type="application/javascript" charset="utf-8"></script>
+        <link rel="stylesheet" href="assets/fonts/caviar-dreams/stylesheet.css">
+        <link rel="stylesheet" href="assets/fonts/montserrat/stylesheet.css">
+        <link rel="stylesheet" href="dist/main.css">
+        <script src="assets/lib/require.js" data-main="dist/main" type="application/javascript" charset="utf-8"></script>
     </head>
     <body>
         <nav id="top-nav">
