Some information missing

--- a/index.html
+++ b/index.html
@@ -58,23 +58,17 @@
                 <div class="row">
                     <div class="item-to-test">
                         <label id="test-label-status" class="header-color header-label header-bold">Testing...</label>
-                        <ul id="items">
-                            <li class="lvl-1">
-                            </li>
-                            <li class="lvl-2">
-                                <label>Outdo</label>
-                                <ul>
-                                    <li>
-                                        <span class="item icons icon-cross">Play</span>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <span class="item icons icon-checkmark">Nsn</span>
-                            </li>
-                            <li>cookies</li>
-                        </ul>
+                        <ul id="items"></ul>
                     </div>
+                </div>
+            </div>
+            
+            <div class="panel">
+                <div class="row description-row">
+                    <label class="header-color header-label header-bold">About result</label>
+                    <article>
+                        This result are based on <a href="https://modernizr.com/" target="__blank">Modernizr</a> testing kit.
+                    </article>
                 </div>
             </div>
         </div>
