--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
             
             <div class="panel item-to-test">
                 <div class="row">
-                    <div class="item-to-test" id="">
-                        <label id="test-label-status" class="header-color header-label header-bold">Testing...</label>
-                        <ul id="items"></ul>
+                    <div class="item-to-test" id="items">
+                       <label style="text-align: center;" class="header-color header-label header-bold">Please wait...</label>
                     </div>
                 </div>
             </div>
