--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
 
         <title>Quick Browser Tester &dash; xCreation</title>
 
-        <link rel="stylesheet" href="assets/fonts/caviar-dreams/stylesheet.css">
-        <link rel="stylesheet" href="assets/fonts/montserrat/stylesheet.css">
+        <link rel="preload" as="style" href="https://cdn.jsdelivr.net/gh/jxmked/resources@xio/assets/fonts/caviar-dreams/stylesheet.css">
+        <link rel="preload" as="style" href="https://cdn.jsdelivr.net/gh/jxmked/resources@xio/assets/fonts/montserrat/stylesheet.css">
+        <link rel="preload" as="style" href="assets/icons/icon-v1.css">
+        <link rel="preload" as="style" href="dist/main.css">
+        
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jxmked/resources@xio/assets/fonts/caviar-dreams/stylesheet.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jxmked/resources@xio/assets/fonts/montserrat/stylesheet.css">
         <link rel="stylesheet" href="assets/icons/icon-v1.css">
         <link rel="stylesheet" href="dist/main.css">
         
